# pi-python

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/agents/: implementation-handoff.md
docs/research/: edit-tool-designs.md  litellm-streaming-tools.md  upstream-agent-core.md  upstream-coding-agent-extensibility.md
scripts/: e2e_live_tui.py  mac_tui_probe.py
tests/: test_workspace_smoke.py
