[project]
name = "pi-python"
version = "0.1.0"
description = "Python implementation aligned with earendil-works/pi semantics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pi_llm",
    "pi_agent",
    "pi_tui",
    "pi_coding_agent",
]

[tool.uv.workspace]
members = [
    "packages/pi_llm",
    "packages/pi_agent",
    "packages/pi_tui",
    "packages/pi_coding_agent",
]

[tool.uv.sources]
pi_llm = { workspace = true }
pi_agent = { workspace = true }
pi_tui = { workspace = true }
pi_coding_agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ty>=0.0.1a16",
]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.11"
